Changing a field name for consistency

--- a/presen/index.html
+++ b/presen/index.html
@@ -155,14 +155,14 @@
                                 <col width="50%" />
                                 </colgroup>
                                 <tbody valign="top">
-                                    <tr><td>equipos    </td><td>&#8594;</td><td>t_teams       </td></tr>
-                                    <tr><td>-----------</td><td>       </td><td>--------------</td></tr>
-                                    <tr><td>id         </td><td>&#8594;</td><td>tea_pteams    </td></tr>
-                                    <tr><td>cod_ine    </td><td>&#8594;</td><td>tea_fcitycodes</td></tr>
-                                    <tr><td>provincia  </td><td>&#8594;</td><td>tea_fregions  </td></tr>
-                                    <tr><td>competicion</td><td>&#8594;</td><td>tea_fcomps    </td></tr>
-                                    <tr><td>nombre     </td><td>&#8594;</td><td>tea_name      </td></tr>
-                                    <tr><td>id_equipo  </td><td>&#8594;</td><td>tea_ticker    </td></tr>
+                                    <tr><td>equipos    </td><td>&#8594;</td><td>t_teams     </td></tr>
+                                    <tr><td>-----------</td><td>       </td><td>------------</td></tr>
+                                    <tr><td>id         </td><td>&#8594;</td><td>tea_pteams  </td></tr>
+                                    <tr><td>cod_ine    </td><td>&#8594;</td><td>tea_fcities </td></tr>
+                                    <tr><td>provincia  </td><td>&#8594;</td><td>tea_fregions</td></tr>
+                                    <tr><td>competicion</td><td>&#8594;</td><td>tea_fcomps  </td></tr>
+                                    <tr><td>nombre     </td><td>&#8594;</td><td>tea_name    </td></tr>
+                                    <tr><td>id_equipo  </td><td>&#8594;</td><td>tea_ticker  </td></tr>
                                 </tbody>
                                 </table>
                     </section>
