Finishing touches for the presentation

--- a/presen/index.html
+++ b/presen/index.html
@@ -33,6 +33,12 @@
                 </section>
                 <section>
                     <section>
+                        <h2>Un poco de historia...</h2>
+                        <img src="https://i.gifer.com/I4oe.gif" />
+                    </section>
+                </section>
+                <section>
+                    <section>
                         <h2>Nombres de las tablas</h2>
                     </section>
                     <section>
@@ -190,6 +196,13 @@
                             SELECT tea_pteams, tea_ticker, tea_name, com_name FROM t_teams, t_comps WHERE tea_fcomps = com_pcomps;
                         </p>
                         </div>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>Gracias</h1>
+                        <h3>Nomenclator de tablas</h3>
+                        <small>Pedro «vehrka» Ferrer</small>
                     </section>
                 </section>
             </div>
